# langsmith_platform_test_agent-public

./: .gitignore  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: deploy_platform-test-agent.yml
agents/_shared/: llm.py
agents/platform-test-agent/: deployment.yaml  metadata.yml  requirements.txt
agents/platform-test-agent/agent/: graph.py  target.py
agents/platform-test-agent/eval/: eval.yaml  golden.jsonl
scripts/: deploy_langsmith.py  deploy_prompts.py  discover_agents.py  evaluate.py  generate_langgraph_config.py  generate_metadata.py  run_offline_evals.py  run_trajectory_evals.py
